feat(): ajout route manquante team, docs swagger à jour, ajout middleware, protection des routes
