# API/src/routes/team-router.ts
@@ -1,11 +1,12 @@
 import express, { Router, Request, Response } from "express";
 import { TeamService } from "../services/team-service";
+import { verifyManager, verifyToken } from "../utils/UserMiddleware";
 
 const teamRouter: Router = express.Router();
 
 const teamService: TeamService = new TeamService();
 
-teamRouter.get("/", async (req: Request, res: Response) => {
+teamRouter.get("/", verifyToken, verifyManager, async (req: Request, res: Response) => {
     try {
         const teams = await teamService.getAllTeams();
         res.status(200).json(teams);
@@ -15,7 +16,7 @@ teamRouter.get("/", async (req: Request, res: Response) => {
     }
 })
 
-teamRouter.get("/:id", async (req: Request, res: Response) => {
+teamRouter.get("/:id", verifyToken, verifyManager, async (req: Request, res: Response) => {
     try {
         const team = await teamService.getTeamById(Number.parseInt(req.params.id));
         res.status(200).json(team);
@@ -25,7 +26,28 @@ teamRouter.get("/:id", async (req: Request, res: Response) => {
     }
 })
 
-teamRouter.post("/", async (req: Request, res: Response) => {
+/**
+ * GET /teams/manager/:managerId
+ * Récupère toutes les équipes d'un manager avec leurs membres
+ */
+teamRouter.get("/manageTeams/", verifyToken, verifyManager, async (req: Request, res: Response) => {
+    try {
+        const managerId = req.user!.user_id;
+
+        if (isNaN(managerId)) {
+            return res.status(400).json({ message: "managerId invalide" });
+        }
+
+        const teams = await teamService.getTeamsByManager(managerId);
+
+        return res.status(200).json(teams);
+    } catch (error) {
+        console.error(error);
+        return res.status(500).json({ message: "Erreur serveur" });
+    }
+});
+
+teamRouter.post("/", verifyToken, verifyManager, async (req: Request, res: Response) => {
     try {
         const team = await teamService.createTeam(req);
         res.status(201).json(team);
@@ -35,7 +57,7 @@ teamRouter.post("/", async (req: Request, res: Response) => {
     }
 })
 
-teamRouter.put("/:id", async (req: Request, res: Response) => {
+teamRouter.put("/:id", verifyToken, verifyManager, async (req: Request, res: Response) => {
     try {
         const team = await teamService.updateTeam(req, Number.parseInt(req.params.id));
         res.status(201).json(team)
@@ -45,7 +67,7 @@ teamRouter.put("/:id", async (req: Request, res: Response) => {
     }
 })
 
-teamRouter.delete("/:id", async (req: Request, res: Response) => {
+teamRouter.delete("/:id", verifyToken, verifyManager, async (req: Request, res: Response) => {
     try {
         const teamId = Number.parseInt(req.params.id)
         await teamService.deleteTeam(teamId)
